# usb-access-control

./: CMakeLists.txt  Makefile  README.md  main.c
inc/: config.h  usb_access_control.h
inc/core/: core.h  usb_device.h  usb_event.h  usb_queue.h  usb_thread.h
inc/fsm/: fsm.h  usb_fsm.h
inc/interface/: interface.h  usbguard_interface.h
inc/logger/: logger.h
inc/security/: security.h  validation.h
inc/utils/: module.h  utils.h
src/: config.c
src/core/: usb_device.c  usb_event.c  usb_queue.c  usb_thread.c
src/fsm/: usb_fsm.c
src/interface/: usbguard_interface.c
src/logger/: logger.c
src/security/: validation.c
src/utils/: utils.c
